# DevIL

./: .gitignore  .travis.yml
DevIL/: .cdtbuild  .cdtproject  .checkstyle  .cvsignore  .project  AUTHORS  BUGS  CMakeLists.txt  CREDITS  ChangeLog  DevIL.dsw  Libraries.txt  MSVC++.txt  Makefile.am  Makefile.in  NEWS  README  README.cmake  README.macosx  README.md  README.unix  README.win  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  configure.bat  configure.in  default  devil.pc
DevIL/.externalToolBuilders/: org.eclipse.cdt.make.core.ScannerConfigBuilder.launch  org.eclipse.cdt.make.core.makeBuilder.launch
DevIL/altivec/: altivec.h  altivec_common.c  altivec_common.h  altivec_typeconversion.c  altivec_typeconversion.h
DevIL/bindings/DotNet/: AssemblyInfo.cpp  COPYING.txt  DevIL.NET.cpp  DevIL.NET.sln  DevIL.NET.vcproj
DevIL/bindings/Mathematica/: DevIL Mathematica.sln  DevIL Mathematica.vcproj  DevIL.nb
DevIL/cmake/: .cvsignore  FindOpenEXR.cmake  cmake_all.bat  cmake_build.bat  cmake_one.bat  get_all_built_files.bat  get_one_built_file.bat  readme.txt
DevIL/cmake/Modules/: FindLCMS2.cmake  FindMNG.cmake
DevIL/cpp wrapper/: Cpp Wrapper.dsp  Cpp Wrapper.vcproj  il_wrap.cpp
DevIL/data/: DevIL.pc.in  IL.pc.in  ILU.pc.in  ILUT.pc.in  Makefile.am
DevIL/docs/: DevIL_manual.texi  Makefile.am  devil.doxyfile
DevIL/docs/images/: DevIL.eps  devil_msvc_include.eps  devil_msvc_lib.eps  sample_alienified.eps  sample_blur_average.eps  sample_blur_gauss.eps  sample_contrast_-05.eps  sample_contrast_02.eps  sample_contrast_16.eps  sample_equalized.eps  sample_original.eps
DevIL/examples/: Examples-vc2015.sln  Examples-vc8.sln  Examples-vc9.sln  Makefile.am
DevIL/examples/Allegro Example/: Makefile  allegtest.c
DevIL/examples/Animation Example/: AnimTest.cpp  AnimTest.dsp  AnimTest.rc
DevIL/examples/D3D Example/: D3DTest.dsp  d3dtest.cpp
DevIL/examples/File Override Example/: Makefile
DevIL/examples/GL Example/: .cvsignore  CMakeLists.txt  Makefile  gltest.c  gltest.h
DevIL/examples/Register Read Example/: Makefile
DevIL/examples/SDL Example/: .cvsignore  Makefile  sdl_test.c
DevIL/examples/Simple Example/: .cvsignore  Makefile  simple.c
DevIL/examples/Volume Texture Example/: .cvsignore  3dtest.c  Makefile
DevIL/examples/WindowsTest/: BatchConv.cpp  CMakeLists.txt  Copy of WindowsTest.cpp  WindowsTest.aps  WindowsTest.cpp  WindowsTest.dep  WindowsTest.dsp  WindowsTest.mak  WindowsTest.plg  WindowsTest.rc  WindowsTest.vcproj  resource.h  windowstest-vc8.vcproj
DevIL/examples/animation_example/: AnimTest.dsp  AnimTest.rc  animation_example-vc2015.vcxproj  animation_example-vc8.vcproj  animation_example-vc9.vcproj
DevIL/examples/cpp_wrapper_example/: cpp_wrapper_example-vc2015.vcxproj  cpp_wrapper_example-vc8.vcproj  cpp_wrapper_example-vc9.vcproj  il_wrap.cpp
DevIL/examples/direct3d_example/: direct3d_example-vc2015.vcxproj  direct3d_example-vc8.vcproj  direct3d_example-vc9.vcproj
DevIL/examples/opengl_example/: gltest.c  opengl_example-vc2015.vcxproj  opengl_example-vc8.vcproj  opengl_example-vc9.vcproj
DevIL/examples/override_example/: iotest.c  override_example-vc2015.vcxproj  override_example-vc8.vcproj  override_example-vc9.vcproj
DevIL/examples/register_read_example/: readtest.c  register_read_example-vc2015.vcxproj  register_read_example-vc8.vcproj  register_read_example-vc9.vcproj
DevIL/examples/sdl_example/: sdl_example-vc2015.vcxproj  sdl_example-vc8.vcproj  sdl_example-vc9.vcproj
DevIL/examples/simple_example/: simple.c  simple_example-vc2015.vcxproj  simple_example-vc8.vcproj  simple_example-vc9.vcproj
DevIL/examples/volume_example/: 3dtest.c  volume_example-vc2015.vcxproj  volume_example-vc8.vcproj  volume_example-vc9.vcproj
DevIL/examples/windows_example/: BatchConv.cpp  WindowsTest.aps  WindowsTest.cpp  WindowsTest.dsp  WindowsTest.rc  WindowsTest.vcproj  resource.h  windows_example-vc2015.vcxproj  windows_example-vc8.vcproj  windows_example-vc9.vcproj  windows_example.cpp  windows_example.rc  windowstest-vc8.vcproj
DevIL/extlibs/: .cvsignore
DevIL/extlibs/lcms/: lcms.dsp
DevIL/extlibs/libjpeg/: libjpeg.dsp
DevIL/extlibs/libmng/: libmng.dsp
DevIL/extlibs/libpng/: libpng.dsp
DevIL/extlibs/libtiff/: libtiff.dsp
DevIL/extlibs/libungif/: libungif.dsp
DevIL/extlibs/zlib/: ZLib.dsp
DevIL/include/: Makefile.am  Makefile.in
DevIL/include/IL/: .cvsignore  DevIL.i  Makefile.am  Makefile.in  build-lua  build-python  build-swig  config.h  config.h.cmake.in  config.h.in  config.h.win  devil_cpp_wrapper.hpp  devil_internal_exports.h  il.h  il_wrap.h  ilu.h  ilu_region.h  ilut.h  ilut_config.h  luadevil.c
DevIL/lib/: .cvsignore  Makefile.am  nada.txt
DevIL/lib/vc6/: DevIL.exp  DevIL.lib  DevILU.exp  DevILU.lib  DevILUT.exp  DevILUT.lib  DevILUT_DBG.lib  DevILUT_DLL.lib  DevILU_DBG.lib  DevILU_DLL.lib  DevIL_DBG.lib  DevIL_DLL.lib  DevIL_lcms.exp  DevIL_lcms_DLL.lib  DevIL_libjpeg.exp  DevIL_libjpeg_DLL.lib  DevIL_libmng.exp  DevIL_libmng_DLL.lib  DevIL_libpng.exp  DevIL_libpng_DLL.lib  DevIL_libtiff.exp  DevIL_libtiff_DLL.lib  DevIL_zlib.exp  DevIL_zlib_DLL.lib
DevIL/libtools/: config.sub  mkinstalldirs
DevIL/libtools/config gen/: .cvsignore  config gen.cpp  config gen.dsp  config gen.dsw  config gen.sln  config gen.vcproj
DevIL/m4/: INFO.txt  ax_check_gl.m4  ax_check_glu.m4  ax_check_glut.m4  ax_lang_compiler_ms.m4  devil-api_checks.m4  devil-definitions.m4  devil-report.m4
DevIL/projects/Mathematica/: DevIL Interface.c  DevIL Mathematica.sln
DevIL/projects/Project Builder/: macconfig.h
DevIL/projects/delphi/: openil.pas  openilu.pas  openilut.pas
DevIL/projects/djgpp/: makefile
DevIL/projects/fortran/: fortran_wrapper.c
DevIL/projects/msvc/: .cvsignore  DevIL.sln  (+4 more)
DevIL/src-IL/: CMakeLists.txt  Makefile.am  Makefile.in
DevIL/src-ILU/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in
DevIL/src-ILUT/: CMakeLists.txt  Makefile.am  Makefile.in
DevIL/src-XTRA/: CMakeLists.txt  readme.txt
DevIL/test/: CMakeLists.txt  Makefile.am  girlfriend.cpp
(+1498 files in other folders)
